# mythoji

./: Cargo.toml  README.md
examples/: creatures.rs  items.rs  locations.rs  people.rs  symbols.rs
src/: lib.rs
